various workshops and a test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,5 +67,6 @@
         "__verbose_abort": "cpp",
         "ios": "cpp",
         "locale": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
